--- a/src/app/components/listen/listen.component.html
+++ b/src/app/components/listen/listen.component.html
@@ -1,1 +1,90 @@
-<p>listen works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2> {{'LISTEN.TITLE' | translate}}
+            </h2>
+            <a id="formModal" style="float: right; cursor: pointer;" (click)="modal.open(contenido)"><span
+                    class="fa fa-plus-circle fa-2x"></span></a>
+            <div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped"
+                            style="width:100%">
+                            <thead>
+                                <tr role="row">
+                                    <th>{{'LISTEN.LANGUAGE' | translate}}</th>
+                                    <th>{{'LISTEN.CODE' | translate}} (Google)</th>
+                                    <th>{{'LISTEN.CODE' | translate}} (Watson)</th>
+                                    <th>{{'COMMON.OPTIONS' | translate}}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of listenService.listens">
+                                    <td>{{ item.idioma }}</td>
+                                    <td>{{ item.codigo }}</td>
+                                    <td>{{ item.watson }}</td>
+                                    <td>
+                                        <span class="btn btn-default" (click)="editListen(item, contenido)"><i
+                                                class="fa fa-edit fa-sm"></i></span>
+                                        <span class="btn btn-default" (click)="deleteListen(item._id)"><i
+                                                class="fa fa-trash fa-sm"></i></span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>{{'LISTEN.LANGUAGE' | translate}}</th>
+                                    <th>{{'LISTEN.CODE' | translate}} (Google)</th>
+                                    <th>{{'LISTEN.CODE' | translate}} (Watson)</th>
+                                    <th>{{'COMMON.OPTIONS' | translate}}</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Listen -->
+    <ng-template #contenido let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel" *ngIf="!listenService.selectedListen._id">{{ 'COMMON.SAVE' |
+                translate }} {{'LISTEN.MODAL' | translate}}</h4>
+            <h4 class="modal-title" id="myModalLabel" *ngIf="!!listenService.selectedListen._id">{{ 'COMMON.UPDATE' |
+                translate }} {{'LISTEN.MODAL' | translate}}</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true"></span></button>
+        </div>
+        <form #listenForm="ngForm" (ngSubmit)="addListen(listenForm)">
+            <input type="hidden" name="_id" [(ngModel)]="listenService.selectedListen._id">
+            <div class="modal-body">
+                <div class="form-horizontal" role="form">
+                    <div class="mb-3">
+                        <label class="col-sm-2 control-label">{{'LISTEN.LANGUAGE' | translate}}</label>
+                        <input type="text" class="form-control input-sm" name="nombre"
+                            [(ngModel)]="listenService.selectedListen.idioma" placeholder="idioma">
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-sm-2 control-label">{{'LISTEN.CODE' | translate}} (Google)</label>
+                        <input type="text" class="form-control input-sm" name="nombre"
+                            [(ngModel)]="listenService.selectedListen.codigo" placeholder="codigo">
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-sm-2 control-label">{{'LISTEN.CODE' | translate}} (Watson)</label>
+                        <input type="text" class="form-control input-sm" name="nombre"
+                            [(ngModel)]="listenService.selectedListen.watson" placeholder="watson">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" (click)="modal.close(contenido)">{{'COMMON.CLOSE' |
+                    translate}}</button>
+                <button type="submit" *ngIf="!listenService.selectedListen._id" class="btn btn-primary">{{'COMMON.SAVE' | translate}}</button>
+                <button type="submit" *ngIf="!!listenService.selectedListen._id"
+                    class="btn btn-primary">{{'COMMON.UPDATE' |
+                    translate}}</button>
+            </div>
+        </form>
+    </ng-template>
+    <!-- Modal Listen -->
+</div>
