--- a/src/app/components/mov/mov.component.html
+++ b/src/app/components/mov/mov.component.html
@@ -1,1 +1,86 @@
-<p>mov works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2> {{'MOVEMENT.TITLE' | translate}}
+            </h2>
+            <a id="formModal" style="float: right; cursor: pointer;" (click)="modal.open(contenido)"><span
+                    class="fa fa-plus-circle fa-2x"></span></a>
+            <div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped"
+                            style="width:100%">
+                            <thead>
+                                <tr role="row">
+                                    <th>{{'COMMON.NAME' | translate}}</th>
+                                    <th>{{'MOVEMENT.CODE' | translate}}</th>
+                                    <th>{{'COMMON.OPTIONS' | translate}}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of movService.movs">
+                                    <td>{{ item.nombre }}</td>
+                                    <td>{{ item.codigo }}</td>
+                                    <td>
+                                        <span class="btn btn-default" (click)="editMov(item, contenido)"><i
+                                                class="fa fa-edit fa-sm"></i></span>
+                                        <span class="btn btn-default" (click)="deleteMov(item._id)"><i
+                                                class="fa fa-trash fa-sm"></i></span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>{{'COMMON.NAME' | translate}}</th>
+                                    <th>{{'MOVEMENT.CODE' | translate}}</th>
+                                    <th>{{'COMMON.OPTIONS' | translate}}</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Mov -->
+    <ng-template #contenido let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel" *ngIf="!movService.selectedMov._id">{{ 'COMMON.SAVE' |
+                translate }} {{'SCRIPT.MODAL' | translate}}</h4>
+            <h4 class="modal-title" id="myModalLabel" *ngIf="!!movService.selectedMov._id">{{ 'COMMON.UPDATE' |
+                translate }} {{'SCRIPT.MODAL' | translate}}</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true"></span></button>
+        </div>
+        <form #movForm="ngForm" (ngSubmit)="addMov(movForm)">
+            <input type="hidden" name="_id" [(ngModel)]="movService.selectedMov._id">
+            <div class="modal-body">
+                <div class="form-horizontal" role="form">
+                    <div class="mb-3">
+                        <label class="col-sm-2 control-label">{{'COMMON.NAME' | translate}}</label>
+                        <input type="text" class="form-control input-sm" name="nombre"
+                            [(ngModel)]="movService.selectedMov.nombre" placeholder="{{'COMMON.NAME' | translate}}">
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-sm-2 control-label">{{'MOVEMENT.CODE' | translate}}</label>
+                        <input type="text" class="form-control input-sm" name="codigo"
+                            [(ngModel)]="movService.selectedMov.codigo" placeholder="{{'MOVEMENT.CODE' | translate}}">
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-sm-2 control-label">{{'MOVEMENT.ACTIONS' | translate}}</label>
+                        <!-- <span class="btn" *ngFor="let i in codes" (click)="addCode(i.code)" ng-bind-html=" i.symbol | trusted"></span> -->
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" (click)="modal.close(contenido)">{{'COMMON.CLOSE' |
+                    translate}}</button>
+                <button type="submit" *ngIf="!movService.selectedMov._id" class="btn btn-primary">{{'COMMON.SAVE' |
+                    translate}}</button>
+                <button type="submit" *ngIf="!!movService.selectedMov._id" class="btn btn-primary">{{'COMMON.UPDATE' |
+                    translate}}</button>
+            </div>
+        </form>
+    </ng-template>
+    <!-- Modal Mov -->
+</div>
