--- a/src/app/components/script/script.component.html
+++ b/src/app/components/script/script.component.html
@@ -56,7 +56,7 @@
           <div class="mb-3">
             <label class="col-sm-2 control-label">{{'COMMON.NAME' | translate}}</label>
             <input type="text" class="form-control input-sm" name="nombre"
-              [(ngModel)]="scriptService.selectedScript.nombre" placeholder="Nombre">
+              [(ngModel)]="scriptService.selectedScript.nombre" placeholder="{{'COMMON.NAME' | translate}}">
           </div>
         </div>
       </div>
